--- a/App/app/src/main/res/layout/fragment_menu.xml
+++ b/App/app/src/main/res/layout/fragment_menu.xml
@@ -12,18 +12,6 @@
         android:layout_height="match_parent">
 
         <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="236dp"
-            android:layout_height="232dp"
-            android:src="@drawable/baseline_play_arrow_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.498" />
-
-        <ImageButton
             android:id="@+id/imageButton2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -36,11 +24,24 @@
             android:src="@android:drawable/btn_star" />
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/hello_menu"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="2dp" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="395dp"
+            android:layout_height="330dp"
+            android:layout_marginTop="64dp"
+            android:src="@drawable/baseline_play_arrow_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textView"
+            app:layout_constraintVertical_bias="0.403" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
