--- a/App/app/src/main/res/layout/row.xml
+++ b/App/app/src/main/res/layout/row.xml
@@ -12,6 +12,12 @@
         android:text="Session" />
 
     <TextView
+        android:id="@+id/session_id"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+
+    <TextView
         android:id="@+id/start_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
