--- a/App/app/src/main/res/layout/fragment_past_session.xml
+++ b/App/app/src/main/res/layout/fragment_past_session.xml
@@ -31,7 +31,7 @@
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart1"
         android:layout_width="match_parent"
-        android:layout_height="@android:dimen/thumbnail_height"
+        android:layout_height="@dimen/height_line_chart"
         android:layout_above="@+id/line_chart" />
 
 
