--- a/App/app/src/main/res/layout/user_profile.xml
+++ b/App/app/src/main/res/layout/user_profile.xml
@@ -1,6 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignBottom="@+id/timechart"
+        android:layout_marginBottom="-531dp"
+        android:background="@drawable/semicircle" />
+
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/timechart"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_line_chart"
+        android:layout_marginTop="160dp"
+        android:layout_marginBottom="160dp"/>
+
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/sessionsBar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_line_chart"
+        android:layout_marginTop="160dp"
+        android:layout_marginBottom="160dp"/>
+
+</RelativeLayout>
