--- a/App/app/src/main/res/layout/fragment_menu.xml
+++ b/App/app/src/main/res/layout/fragment_menu.xml
@@ -32,7 +32,7 @@
             tools:layout_editor_absoluteY="2dp" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/startSessionBt"
             android:layout_width="395dp"
             android:layout_height="330dp"
             android:layout_marginTop="64dp"
