--- a/App/app/src/main/res/layout/session.xml
+++ b/App/app/src/main/res/layout/session.xml
@@ -13,7 +13,7 @@
 
     <!-- Button -->
     <Button
-        android:id="@+id/sessionBt"
+        android:id="@+id/sessionExitBt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sessionButton"
