--- a/App/app/src/main/res/values/colors.xml
+++ b/App/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="our_dark_blue">#006d77</color>
+    <color name="our_light_blue">#83c5be</color>
+    <color name="our_lighter_blue">#edf6f9</color>
+    <color name="our_accent_pink">#ffddd2</color>
+    <color name="our_pink">#f96e46</color>
 </resources>
