--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/our_lighter_blue">
 
 
     <FrameLayout
@@ -14,7 +15,8 @@
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/our_lighter_blue">
 
     </FrameLayout>
 
@@ -24,8 +26,11 @@
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
         android:animationCache="true"
+        android:background="@color/our_light_blue"
         android:defaultFocusHighlightEnabled="true"
-        app:itemTextColor="#000000"
+        app:backgroundTint="#9BBDBA"
+        app:itemIconTint="@color/our_dark_blue"
+        app:itemTextColor="@color/our_dark_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
