--- a/App/app/src/main/res/layout/fragment_menu.xml
+++ b/App/app/src/main/res/layout/fragment_menu.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuFragment">
+    tools:context=".MenuFragment"
+    android:theme="@style/Theme.AppCompat.Light">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
