--- a/App/app/src/main/res/layout/fragment_profile.xml
+++ b/App/app/src/main/res/layout/fragment_profile.xml
@@ -1,18 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/our_lighter_blue"
-    android:orientation="vertical"
-    android:padding="50dp"
     tools:context=".ProfileFragment">
 
+    <ImageView
+        android:id="@+id/profile_circle"
+        android:layout_width="705dp"
+        android:layout_height="579dp"
+        android:src="@drawable/baseline_circle_24"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.647" />
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:id="@+id/linearLayout2"
+        android:layout_width="328dp"
+        android:layout_height="539dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="265dp">
+
 
         <TextView
             android:id="@+id/userName"
@@ -27,6 +43,7 @@
             android:id="@+id/lineLegend"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="60dp"
             android:text="Time of Relaxation evolution"
             android:textAlignment="center" />
 
@@ -51,4 +68,4 @@
             android:layout_height="200dp" />
     </LinearLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
