--- a/App/app/src/main/res/layout/fragment_menu.xml
+++ b/App/app/src/main/res/layout/fragment_menu.xml
@@ -14,27 +14,30 @@
 
         <ImageButton
             android:id="@+id/imageButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#00FFFFFF"
+            android:src="@drawable/baseline_settings_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.954"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.023"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/btn_star" />
+            app:layout_constraintVertical_bias="0.023" />
 
         <ImageView
             android:id="@+id/startSessionBt"
-            android:layout_width="395dp"
-            android:layout_height="330dp"
+            android:layout_width="379dp"
+            android:layout_height="329dp"
             android:layout_marginTop="64dp"
-            android:src="@drawable/baseline_play_arrow_24"
+            android:rotation="90"
+            android:src="@drawable/play"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.403"/>
+            app:layout_constraintVertical_bias="0.376" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
