--- a/App/app/src/main/res/layout-land/fragment_menu.xml
+++ b/App/app/src/main/res/layout-land/fragment_menu.xml
@@ -30,15 +30,12 @@
             android:id="@+id/startSessionBt"
             android:layout_width="379dp"
             android:layout_height="329dp"
-            android:layout_marginTop="64dp"
             android:rotation="90"
             android:src="@drawable/play_triangle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.376" />
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
