--- a/App/app/src/main/res/values/colors.xml
+++ b/App/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="our_lighter_blue">#edf6f9</color>
     <color name="our_accent_pink">#ffddd2</color>
     <color name="our_pink">#f96e46</color>
+    <color name="light_blue_50">#FFE1F5FE</color>
+    <color name="light_blue_200">#FF81D4FA</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
 </resources>
