--- a/App/app/src/main/res/layout-land/session.xml
+++ b/App/app/src/main/res/layout-land/session.xml
@@ -1,7 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:background = "#EDF6F9">  <!-- Background color; circle and button colors are set in Session.java -->
 
-</FrameLayout>
+    <!-- CircleView -->
+    <org.mines.cmeb.musecmeb.CircleView
+        android:id="@+id/circleView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true" />
+
+    <!-- Button -->
+    <Button
+        android:id="@+id/sessionExitBt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/sessionButton"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp" />
+</RelativeLayout>
