--- a/App/app/src/main/res/layout/fragment_history.xml
+++ b/App/app/src/main/res/layout/fragment_history.xml
@@ -39,13 +39,15 @@
             android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+
             android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:cacheColorHint="@color/black"
+            android:layout_marginBottom="20dp"
+
+
             android:drawSelectorOnTop="false"
+
             android:paddingHorizontal="5dp"
-            android:paddingVertical="5dp">
+            android:paddingVertical="10dp">
 
         </ListView>
 
