--- a/App/app/src/main/res/layout-land/fragment_past_session.xml
+++ b/App/app/src/main/res/layout-land/fragment_past_session.xml
@@ -25,14 +25,14 @@
         android:textSize="22sp"
         android:textColor="@color/our_dark_blue"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
+
         android:fontFamily="sans-serif-medium"/>
 
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart1"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_line_chart"
+        android:layout_height="190dp"
         android:layout_above="@+id/line_chart" />
 
 
@@ -44,6 +44,5 @@
         android:text="Time of relaxation: 3 minutes and 23 seconds"
         android:textSize="18sp"
         android:textColor="@color/our_light_blue"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"/>
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
