--- a/App/app/src/main/res/layout/fragment_past_session.xml
+++ b/App/app/src/main/res/layout/fragment_past_session.xml
@@ -32,7 +32,9 @@
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart1"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_line_chart"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_height="300dp"
         android:layout_above="@+id/line_chart" />
 
 
